Update 0.9.7 (Fix HTMX part 1)

--- a/Views/Manga/Search.cshtml
+++ b/Views/Manga/Search.cshtml
@@ -13,7 +13,7 @@
         </div>
     </div>
     
-    <div id="search-results-and-pagination" hx-indicator="#content-loading-spinner">
+    <div id="search-results-and-pagination" data-htmx-test="true">
         <partial name="_SearchResultsWrapperPartial" model="Model" />
     </div>
 </div> 
