--- a/wwwroot/css/main.css
+++ b/wwwroot/css/main.css
@@ -34,6 +34,7 @@
  * Style cho các thành phần giao diện
  */
 @import url("./core/components.css");
+@import url("./components/custom-dropdown.css");
 @import url("./core/navbar.css");
 @import url("./core/sidebar.css");
 @import url("./core/manga.css");
@@ -47,4 +48,4 @@
 @import url("./pages/home.css");
 @import url("./pages/manga-details.css");
 @import url("./pages/chapter.css");
-@import url("./pages/search/index.css"); 
+@import url("./pages/search/index.css");
