--- a/wwwroot/css/main.css
+++ b/wwwroot/css/main.css
@@ -48,4 +48,5 @@
 @import url("./pages/home.css");
 @import url("./pages/manga-details.css");
 @import url("./pages/chapter.css");
+@import url("./pages/read.css");
 @import url("./pages/search/index.css");
